--- a/assets/css/table.css
+++ b/assets/css/table.css
@@ -1,16 +1,31 @@
-table {
-    border-collapse: collapse;
-    width: 100%;
+html, body {
+
+    margin: 0;
+    padding: 0;
 }
 
-th, td {
-    text-align: left;
-    padding: 8px;
-}
+.header {
+    background-color: #f2f2f2;
+    text-align: center;
+    padding: 130px 0 ;
+    font-size: 60px;
+    position: relative;
+    z-index: -1;
 
-tr:nth-child(even) {
-    background-color: #D6EEEE;
 }
-tr:nth-child(odd) {
-    background-color: #979b9b;
+header h1{
+    padding: 15 px;
+}
+.topleft {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+    font-size: 18px;
+    padding-top: 60px;
+
+
+}
+.cheiasol{
+    height: 80px;
+    border-radius: 50%;
 }
