--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,15 +1,17 @@
-.nav {
+.navb {
     position: fixed;
     top: 0;
     width: 100%;
     background-color: #333;
+    display: flex;
+    flex-direction: nowrap;
+
 }
 
-ul {
+.ulnav{
     list-style-type: none;
-    margin: 0;
-    padding: 15px;
 
+    padding: 15px;
     display: flex;
 }
 
@@ -21,9 +23,12 @@ li a {
     text-decoration: none;
 
 }
+
 li a:hover {
+    color: white;
     background-color: #4CAF50;
 }
 .active {
     background-color: #4CAF50;
 }
+
