--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -39,7 +39,7 @@ div a{
 }
 
 .imagine{
-    height: 48px;
+    height: 52px;
 }
 
 .dropbtn {
@@ -55,20 +55,23 @@ div a{
 
 .dropdown:hover .dropbtn {
     background-color: #4CAF50;
+
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
+
     background-color: white;
     min-width: 160px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 
 }
 
-.dropdown-content a {
+.dropdown-content a{
     color:black;
     padding: 12px;
+    text-align: center;
 }
 
 .dropdown-content a:hover {
