--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -3,15 +3,22 @@
     top: 0;
     width: 100%;
     background-color: #333;
-    display: flex;
-    flex-direction: nowrap;
 
+}
+.navb a{
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 }
 
 .ulnav{
     list-style-type: none;
     padding: 15px;
     display: flex;
+    flex-direction: row;
+
 }
 
 li a {
@@ -30,4 +37,9 @@ li a:hover {
 .active {
     background-color: #4CAF50;
 }
+@media screen and (max-width: 770px) {
+    .ulnav {
 
+        display: block;
+    }
+}
