--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -3,32 +3,35 @@ body {
     padding: 0;
 }
 
+.imagine{
+    height: 52px;
+}
+
+.dem{
+    display: flex;
+    justify-content: space-between;;
+}
+
 .topnav {
 
-   background-color: #333;
+    background-color: #333;
+    padding: 15px;
     position: fixed;
     width: 100%;
-    padding: 15px;
 
 }
 
 .topnav a {
-
+    float: left;
+    display: block;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-
-
 }
 
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-.topnav a.active {
+.active {
     background-color: #04AA6D;
     color: white;
 }
@@ -37,24 +40,93 @@ body {
     display: none;
 }
 
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
+.dropdown {
+    float: left;
+    overflow: hidden;
 
+}
+
+.dropdown .dropbtn {
+    font-size: 17px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+    background-color: #555;
+    color: white;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+@media screen and (max-width: 769px) {
+    .dem{
+        display: block
+    }
+    .topnav a:not(:first-child), .dropdown .dropbtn {
+        display: none;
+    }
+    .topnav a.icon {
+        position: absolute;
+        float: right;
+        right: 20px;
+        top: 13px;
         display: block;
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 769px) {
     .topnav.responsive {position: relative;}
     .topnav.responsive .icon {
         position: absolute;
-        right: 0;
-        top: 0;
-    }
-    .topnav.responsive a {
 
+
+    }
+
+    .topnav.responsive a {
+        float: none;
         display: block;
+        flex-direction: column;
+        text-align: left;
+    }
+
+    .topnav.responsive .dropdown {float: none;}
+
+    .topnav.responsive .dropdown-content {position: relative;}
+
+    .topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
         text-align: left;
     }
 }
