--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,45 +1,123 @@
-.navb {
-    position: fixed;
-    top: 0;
-    width: 100%;
+.dem{
+    display: flex;
+    justify-content: space-between;;
+}
+
+.topnav {
+
     background-color: #333;
+    padding: 15px;
+    position: fixed;
+    width: 100%;
 
 }
-.navb a{
+
+.topnav a {
+    float: left;
     display: block;
+    color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
 }
 
-.ulnav{
-    list-style-type: none;
-    padding: 15px;
-    display: flex;
-    flex-direction: row;
-
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-
-}
-
-li a:hover {
-    color: white;
-    background-color: #4CAF50;
-}
 .active {
-    background-color: #4CAF50;
+    background-color: #04AA6D;
+    color: white;
 }
-@media screen and (max-width: 770px) {
-    .ulnav {
 
+.topnav .icon {
+    display: none;
+}
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+
+}
+
+.dropdown .dropbtn {
+    font-size: 17px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+    background-color: #555;
+    color: white;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+@media screen and (max-width: 769px) {
+    .dem{
+        display: block
+    }
+    .topnav a:not(:first-child), .dropdown .dropbtn {
+        display: none;
+    }
+    .topnav a.icon {
+        position: absolute;
+        float: right;
+        right: 20px;
+        top: 13px;
         display: block;
+    }
+}
+
+@media screen and (max-width: 769px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+        position: absolute;
+
+
+    }
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        flex-direction: column;
+        text-align: left;
+    }
+
+    .topnav.responsive .dropdown {float: none;}
+
+    .topnav.responsive .dropdown-content {position: relative;}
+
+    .topnav.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
+        text-align: left;
     }
 }
