--- a/assets/css/column.css
+++ b/assets/css/column.css
@@ -36,8 +36,16 @@
     background-image: url("https://img.joomcdn.net/48945a214e42bf3585af9ea4c5c29647d9e9e2cb_1024_1024.jpeg");
     background-position: center;
     background-size: cover ;
+}
 
-
+.columnT1{
+    background-color: #5c636a;
+}
+.columnT2{
+    background-color: #8c8c8c;
+}
+.columnT3{
+    background-color: #b1b4b7;
 }
 
 /* Responsive layout - makes a one column-layout instead of a two-column layout */
