--- a/assets/css/column.css
+++ b/assets/css/column.css
@@ -4,9 +4,12 @@
     flex-direction: column;
     font-size: 30px;
     text-align: center;
+}
 
-
-
+.colmargine {
+    display: flex;
+    flex-direction: column;
+    font-size: 30px;
 }
 
 .width-33{
