--- a/assets/css/despre.css
+++ b/assets/css/despre.css
@@ -11,11 +11,15 @@
     margin-right: auto;
     border-radius: 50px;
     padding-bottom: 1em;
+    height: auto;
+    max-width: 100%;
 }
 
 @media screen and (max-width: 970px) {
-    section , image {
+    section , image , .center1 {
         font-size: 9px;
+        max-width: 100%;
+        height: auto;
     }
 
 }
