--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -109,6 +109,19 @@ form .gender-details .category{
     form .button input:hover{
         background: linear-gradient(135deg, #71b7e6, #74d797);
     }
+.message{
+    position: sticky;
+    top:0; left:0; right:0;
+    padding:15px 10px;
+    background-color: var(--white);
+    text-align: center;
+    z-index: -1000;
+    box-shadow: var(--box-shadow);
+    color:var(--black);
+    font-size: 20px;
+    text-transform: capitalize;
+    cursor: pointer;
+}
     @media (max-width: 584px){
        .container{
            max-width: 100%;
