--- a/assets/css/magazin.css
+++ b/assets/css/magazin.css
@@ -1,212 +1,41 @@
-:root{
-    --blue:#3498db;
-    --red:#e74c3c;
-    --orange:#f39c12;
-    --black:#333;
-    --white:#fff;
-    --light-bg:#eee;
-    --box-shadow:0 5px 10px rgba(0,0,0,.1);
-    --border:2px solid var(--black);
-}
-
-*{
-    font-family: 'Poppins', sans-serif;
-    margin:0; padding:0;
-    box-sizing: border-box;
-    outline: none; border: none;
-    text-decoration: none;
-}
-
-*::-webkit-scrollbar{
-    width: 10px;
-    height: 5px;
-}
-
-*::-webkit-scrollbar-track{
-    background-color: transparent;
-}
-
-*::-webkit-scrollbar-thumb{
-    background-color: var(--blue);
-}
-
-body{
-    background-color: var(--light-bg);
-}
-
-.message{
-    position: sticky;
-    top:0; left:0; right:0;
-    padding:15px 10px;
-    background-color: var(--white);
+.user-profile {
+    padding: 20px;
     text-align: center;
-    z-index: 1000;
-    box-shadow: var(--box-shadow);
-    color:var(--black);
-    font-size: 20px;
-    text-transform: capitalize;
-    cursor: pointer;
-}
-
-.btn,
-.delete-btn,
-.option-btn{
-    display: inline-block;
-    padding:10px 30px;
-    cursor: pointer;
-    font-size: 18px;
-    color:var(--white);
+    border: black;
+    background-color: white;
+    box-shadow: gray;
     border-radius: 5px;
-    text-transform: capitalize;
+    margin: 20px auto;
+    max-width: 500px;
 }
 
-.btn:hover,
-.delete-btn:hover,
-.option-btn:hover{
-    background-color: var(--black);
+.user-profile p {
+    margin-bottom: 10px;
+    font-size: 25px;
+    color: black;
 }
 
-.btn{
-    background-color: var(--blue);
+.user-profile p span {
+    color: red;
+}
+
+.user-profile .flex {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-items: flex-end;
+}
+
+.btn1{
+    background-color: blue;
     margin-top: 10px;
 }
 
 .delete-btn{
-    background-color: var(--red);
+    background-color: red;
 }
 
 .option-btn{
-    background-color: var(--orange);
-}
-
-.form-container{
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding:20px;
-    padding-bottom: 70px;
-}
-
-.form-container form{
-    width: 500px;
-    border-radius: 5px;
-    border:var(--border);
-    padding:20px;
-    text-align: center;
-    background-color: var(--white);
-}
-
-.form-container form h3{
-    font-size: 30px;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-    color:var(--black);
-}
-
-.form-container form .box{
-    width: 100%;
-    border-radius: 5px;
-    border:var(--border);
-    padding:12px 14px;
-    font-size: 18px;
-    margin:10px 0;
-}
-
-.form-container form p{
-    margin-top: 20px;
-    font-size: 20px;
-    color:var(--black);
-}
-
-.form-container form p a{
-    color:var(--red);
-}
-
-.form-container form p a:hover{
-    text-decoration: underline;
-}
-
-.container{
-
-    margin:0 auto;
-    max-width: 1200px;
-
-}
-
-.container .heading{
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 40px;
-    text-transform: uppercase;
-    color:var(--black);
-}
-
-.container .user-profile{
-    padding:20px;
-    text-align: center;
-    border:var(--border);
-    background-color: var(--white);
-    box-shadow: var(--box-shadow);
-    border-radius: 5px;
-    margin:20px auto;
-    max-width: 500px;
-}
-
-.container .user-profile p{
-    margin-bottom: 10px;
-    font-size: 25px;
-    color:var(--black);
-}
-
-.container .user-profile p span{
-    color:var(--red);
-}
-
-.container .user-profile .flex{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap:10px;
-    align-items: flex-end;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width:1200px){
-    .container {
-        overflow-x: scroll;
-
-
-
-        width: 1200px;
-    }
-}
-
-@media (max-width:450px){
-    .container .heading{
-        font-size: 30px;
-    }
-    .container  .box-container .box {
-        height: 200px;
-    }
+    background-color: orange;
 }
