--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,6 +1,10 @@
-.dem{
+.imagine{
+    height: 52px;
+}
+
+.dem{   /* asezare nav */
     display: flex;
-    justify-content: space-between;;
+    justify-content: space-between;
 }
 
 .topnav {
@@ -33,15 +37,16 @@
 }
 
 .dropdown {
+
     float: left;
     overflow: hidden;
 
 }
 
 .dropdown .dropbtn {
-    font-size: 17px;
+
     border: none;
-    outline: none;
+
     color: white;
     padding: 14px 16px;
     background-color: inherit;
